// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedDial renders speedDial with variant prop variant is flat 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "bottom": 30,
          "position": "absolute",
          "right": 30,
          "width": 40,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 50,
              "flexDirection": "row",
              "height": 50,
              "position": "absolute",
              "width": 50,
            },
            [
              {
                "opacity": 0,
                "transform": [
                  {
                    "translateY": -0,
                  },
                ],
              },
              {
                "bottom": 20,
              },
            ],
            {
              "backgroundColor": "#82B98E",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 50,
              "height": "100%",
              "justifyContent": "center",
              "opacity": 1,
              "width": "100%",
            }
          }
          testID="children_item_0"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#ffffff",
                  "fontSize": 25,
                },
                undefined,
                {
                  "fontFamily": "anticon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            typography={
              {
                "body": {
                  "medium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  "regular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 14,
                    "lineHeight": 16,
                  },
                  "smedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                  "sregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                  "xsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 10,
                    "lineHeight": 16,
                  },
                  "xsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 10,
                    "lineHeight": 14,
                  },
                  "xxsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                  "xxsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                },
                "heading": {
                  "h1": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 30,
                    "lineHeight": 45,
                  },
                  "h2": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 28,
                    "lineHeight": 42,
                  },
                  "h3": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 23,
                    "lineHeight": 35,
                  },
                  "h4": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 19,
                    "lineHeight": 29,
                  },
                  "h5": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 16,
                    "lineHeight": 25,
                  },
                },
              }
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 50,
              "flexDirection": "row",
              "height": 50,
              "position": "absolute",
              "width": 50,
            },
            [
              {
                "opacity": 0,
                "transform": [
                  {
                    "translateY": -0,
                  },
                ],
              },
              {
                "bottom": 20,
              },
            ],
            {
              "backgroundColor": "#82B98E",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "500",
                "paddingHorizontal": 12,
                "paddingVertical": 5,
                "position": "absolute",
                "right": 60,
                "textAlign": "center",
                "top": 10,
              },
              {
                "backgroundColor": "white",
                "borderRadius": 5,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#82B98E",
                  "fontSize": 10,
                  "lineHeight": 16,
                },
              ]
            }
          >
            ads
          </Text>
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 50,
              "height": "100%",
              "justifyContent": "center",
              "opacity": 1,
              "width": "100%",
            }
          }
          testID="children_item_1"
        />
      </View>
      <View
        style={
          [
            {
              "borderRadius": 50,
              "flexDirection": "row",
              "height": 50,
              "position": "absolute",
              "width": 50,
            },
            [
              {
                "opacity": 0,
                "transform": [
                  {
                    "translateY": -0,
                  },
                ],
              },
              {
                "bottom": 20,
              },
            ],
            {
              "backgroundColor": "#82B98E",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 50,
              "height": "100%",
              "justifyContent": "center",
              "opacity": 1,
              "width": "100%",
            }
          }
          testID="children_item_2"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#ffffff",
                  "fontSize": 25,
                },
                undefined,
                {
                  "fontFamily": "anticon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            typography={
              {
                "body": {
                  "medium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  "regular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 14,
                    "lineHeight": 16,
                  },
                  "smedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                  "sregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                  "xsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 10,
                    "lineHeight": 16,
                  },
                  "xsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 10,
                    "lineHeight": 14,
                  },
                  "xxsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                  "xxsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                },
                "heading": {
                  "h1": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 30,
                    "lineHeight": 45,
                  },
                  "h2": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 28,
                    "lineHeight": 42,
                  },
                  "h3": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 23,
                    "lineHeight": 35,
                  },
                  "h4": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 19,
                    "lineHeight": 29,
                  },
                  "h5": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 16,
                    "lineHeight": 25,
                  },
                },
              }
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          [
            null,
            {
              "borderRadius": 50,
              "height": 60,
              "width": 60,
            },
            {
              "backgroundColor": "#195CEF",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 50,
              "height": "100%",
              "justifyContent": "center",
              "opacity": 1,
              "width": "100%",
            }
          }
          testID="base_item"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": undefined,
                  "fontSize": 20,
                },
                undefined,
                {
                  "fontFamily": "anticon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            typography={
              {
                "body": {
                  "medium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  "regular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 14,
                    "lineHeight": 16,
                  },
                  "smedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                  "sregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                  "xsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 10,
                    "lineHeight": 16,
                  },
                  "xsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 10,
                    "lineHeight": 14,
                  },
                  "xxsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                  "xxsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                },
                "heading": {
                  "h1": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 30,
                    "lineHeight": 45,
                  },
                  "h2": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 28,
                    "lineHeight": 42,
                  },
                  "h3": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 23,
                    "lineHeight": 35,
                  },
                  "h4": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 19,
                    "lineHeight": 29,
                  },
                  "h5": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 16,
                    "lineHeight": 25,
                  },
                },
              }
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`SpeedDial renders speedDial with variant prop variant is spread 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "bottom": 30,
          "position": "absolute",
          "right": 30,
          "width": 40,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 50,
              "flexDirection": "row",
              "height": 50,
              "position": "absolute",
              "width": 50,
            },
            {
              "opacity": 0,
              "transform": [
                {
                  "translateX": -0,
                },
              ],
            },
            {
              "backgroundColor": "#82B98E",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 50,
              "height": "100%",
              "justifyContent": "center",
              "opacity": 1,
              "width": "100%",
            }
          }
          testID="children_item_0"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#ffffff",
                  "fontSize": 25,
                },
                undefined,
                {
                  "fontFamily": "anticon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            typography={
              {
                "body": {
                  "medium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  "regular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 14,
                    "lineHeight": 16,
                  },
                  "smedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                  "sregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                  "xsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 10,
                    "lineHeight": 16,
                  },
                  "xsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 10,
                    "lineHeight": 14,
                  },
                  "xxsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                  "xxsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                },
                "heading": {
                  "h1": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 30,
                    "lineHeight": 45,
                  },
                  "h2": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 28,
                    "lineHeight": 42,
                  },
                  "h3": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 23,
                    "lineHeight": 35,
                  },
                  "h4": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 19,
                    "lineHeight": 29,
                  },
                  "h5": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 16,
                    "lineHeight": 25,
                  },
                },
              }
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderRadius": 50,
              "flexDirection": "row",
              "height": 50,
              "position": "absolute",
              "width": 50,
            },
            {
              "opacity": 0,
              "transform": [
                {
                  "translateX": -0,
                },
                {
                  "translateY": -0,
                },
              ],
            },
            {
              "backgroundColor": "#82B98E",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 50,
              "height": "100%",
              "justifyContent": "center",
              "opacity": 1,
              "width": "100%",
            }
          }
          testID="children_item_1"
        />
      </View>
      <View
        style={
          [
            {
              "borderRadius": 50,
              "flexDirection": "row",
              "height": 50,
              "position": "absolute",
              "width": 50,
            },
            {
              "opacity": 0,
              "transform": [
                {
                  "translateY": -0,
                },
              ],
            },
            {
              "backgroundColor": "#82B98E",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 50,
              "height": "100%",
              "justifyContent": "center",
              "opacity": 1,
              "width": "100%",
            }
          }
          testID="children_item_2"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#ffffff",
                  "fontSize": 25,
                },
                undefined,
                {
                  "fontFamily": "anticon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            typography={
              {
                "body": {
                  "medium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  "regular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 14,
                    "lineHeight": 16,
                  },
                  "smedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                  "sregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                  "xsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 10,
                    "lineHeight": 16,
                  },
                  "xsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 10,
                    "lineHeight": 14,
                  },
                  "xxsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                  "xxsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                },
                "heading": {
                  "h1": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 30,
                    "lineHeight": 45,
                  },
                  "h2": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 28,
                    "lineHeight": 42,
                  },
                  "h3": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 23,
                    "lineHeight": 35,
                  },
                  "h4": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 19,
                    "lineHeight": 29,
                  },
                  "h5": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 16,
                    "lineHeight": 25,
                  },
                },
              }
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        style={
          [
            null,
            {
              "borderRadius": 50,
              "height": 60,
              "width": 60,
            },
            {
              "backgroundColor": "#195CEF",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "borderRadius": 50,
              "height": "100%",
              "justifyContent": "center",
              "opacity": 1,
              "width": "100%",
            }
          }
          testID="base_item"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "white",
                  "fontSize": 25,
                },
                undefined,
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
            typography={
              {
                "body": {
                  "medium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  },
                  "regular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 14,
                    "lineHeight": 16,
                  },
                  "smedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 12,
                    "lineHeight": 18,
                  },
                  "sregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                  "xsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 10,
                    "lineHeight": 16,
                  },
                  "xsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 10,
                    "lineHeight": 14,
                  },
                  "xxsmedium": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                  "xxsregular": {
                    "fontFamily": "Poppins-Regular",
                    "fontSize": 8,
                    "lineHeight": 12,
                  },
                },
                "heading": {
                  "h1": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 30,
                    "lineHeight": 45,
                  },
                  "h2": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 28,
                    "lineHeight": 42,
                  },
                  "h3": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 23,
                    "lineHeight": 35,
                  },
                  "h4": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 19,
                    "lineHeight": 29,
                  },
                  "h5": {
                    "fontFamily": "Poppins-Medium",
                    "fontSize": 16,
                    "lineHeight": 25,
                  },
                },
              }
            }
          >
            󰅖
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
